--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mkpanq",
   "license": "ISC",
   "dependencies": {
+    "binary-parser": "^2.2.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
